@@ -1,3 +1,8 @@
+2009-05-21  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
+
+	* matchbox/core/mb-wm-client.c (mb_wm_client_destroy): Free decor list
+	after unreffing the objects in the list.
+
 2009-05-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	* matchbox/core/mb-wm-layout.c (mb_wm_layout_real_layout_free): Stop
